inserção de página de erro

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -253,4 +253,29 @@
                 justify-content: center
                 align-items: center
                 color: white
-                font-weight: bold
+                font-weight: bold 
+
+.error 
+    width: 70%
+    border-radius: 10px
+    border: 1px inset
+    background: beige
+    border-color: #a94442
+    margin: 2em auto
+    text-align: center
+    h1 
+        color: red
+        font-size: 7em
+    p 
+        color: red;
+        font-size: 15px;
+    .meme 
+        color: red
+        p 
+            font-size: 20px
+        h2
+            font-size: 5em
+            color: red
+
+
+
