--- a/app/views/admin/lotteries/_form.html.slim
+++ b/app/views/admin/lotteries/_form.html.slim
@@ -21,7 +21,7 @@ h2 Loterias
           .col-md-6.col-sm-12.col-xs-12    
             = f.input :event, :label => 'Evento'
           .col-md-6.col-sm-12.col-xs-12
-            = f.input :ticket, :label => 'Quantidade de Tickets'
+            = f.input :ticket, :label => 'Quantidade de Títulos'
           .col-md-6.col-sm-12.col-xs-12
             = f.input :price, :label => 'Preço'
           .col-md-6.col-sm-12.col-xs-12 
