--- a/app/views/frontend/public/purchase.html.slim
+++ b/app/views/frontend/public/purchase.html.slim
@@ -2,7 +2,7 @@
         .home-title 
             div
                 = image_tag 'Cash.png'
-                h1 Comprar Tickets
+                h1 Comprar Títulos
             p Escolha a quantidade
         .lottery-selected
             -if  @lottery.image_url.present?
