--- a/app/assets/stylesheets/frontend/layout.sass
+++ b/app/assets/stylesheets/frontend/layout.sass
@@ -6,7 +6,7 @@
 
 .main 
     grid-area: main
-    background-color: #ffffff
+    background-color: #cbcbcb
     min-height: calc(100vh - 160px)
 
 .header 
