--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -433,7 +433,7 @@
     p
         margin: 0
     img
-        width: 300px
+        width: 100%
         border-radius: 10px
         margin-bottom: 30px
 
