--- a/app/assets/stylesheets/frontend/layout.sass
+++ b/app/assets/stylesheets/frontend/layout.sass
@@ -3,10 +3,11 @@
     grid-template-areas: "header header header" "aside main main" "aside footer footer"
     grid-template-columns: 200px 1fr
     grid-template-rows: 60px 2fr
+    background-color: $letterColor
 
 .main 
     grid-area: main
-    background-color: #cbcbcb
+    background-color: #161c24
     min-height: calc(100vh - 160px)
 
 .header 
@@ -35,7 +36,7 @@
 
 .footer 
     grid-area: footer
-    background-color: #c3c3c3
+    background-color: black
     color: #000000
     height: 100px
     text-align: center
