--- a/app/views/frontend/public/comunications.html.slim
+++ b/app/views/frontend/public/comunications.html.slim
@@ -1,6 +1,6 @@
 .home-title 
     div
-        /= image_tag 'Cash.png'
+        = icon('fas', 'list-alt')
         h1 Comunicados
     p Informações para o cliente
 
