--- a/app/views/frontend/public/events.html.slim
+++ b/app/views/frontend/public/events.html.slim
@@ -3,7 +3,7 @@ section#agreement
     
     .home-title 
         div
-            = image_tag 'Cash.png'
+            = icon('fas', 'money-bill-alt')
             h1 Campanhas
         p Escolha sua campanha
 
