--- a/app/views/frontend/public/winners.html.slim
+++ b/app/views/frontend/public/winners.html.slim
@@ -3,7 +3,7 @@ section#agreement
     
     .home-title 
         div
-            /= image_tag 'Cash.png'
+            = icon('fas', 'trophy')
             h1 Vencedores
         p Lista de todos os vencedores
 
@@ -26,5 +26,6 @@ section#agreement
                                     
                 - else 
                     .sorteio-container
-                        h3 Por enquanto não há vencedores !       
+                        h3 Por enquanto não há vencedores !    
+                   
                 
