--- a/app/assets/stylesheets/frontend/pages/login.sass
+++ b/app/assets/stylesheets/frontend/pages/login.sass
@@ -20,9 +20,11 @@
     margin-bottom: 30px
     h3
         font-weight: bold
-        color: black
+        color: $letterColor
         font-size: 30pt
         margin-bottom: 0
+    p
+        color: $letterColor
 
 .input-container
     display: flex
