--- a/app/views/frontend/public/purchase.html.slim
+++ b/app/views/frontend/public/purchase.html.slim
@@ -1,54 +1,55 @@
-    .container-fluid   
-        .home-title 
-            div
-                = image_tag 'Cash.png'
-                h1 Comprar Títulos
-            p Escolha a quantidade
-        .lottery-selected
-            -if  @lottery.image_url.present?
-                = image_tag @lottery.image_url
-            h2 = @lottery.event 
-            p = 'Código do Sorteio: ' + @lottery.id.to_s
-            p = 'Data do Sorteio: ' + @lottery.date_event.strftime('%d/%m/%Y')
-            
-  
-    = form_with(model: [@lottery], url: "#", method:'post', id: 'lottery-form') do |form|
-        .container-sorteio
-          .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
-              = form.button "+5", type: 'button', class: 'button-add-numbers', increment: 5
-          .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
-              = form.button "+10", type: 'button', class: 'button-add-numbers', increment: 10
-          .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
-              = form.button "+20", type: 'button', class: 'button-add-numbers', increment: 20
-          .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
-              = form.button "+40", type: 'button', class: 'button-add-numbers', increment: 40
-          .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
-              = form.button "+80", type: 'button', class: 'button-add-numbers', increment: 80
-          .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
-              = form.button "+160", type: 'button', class: 'button-add-numbers', increment: 160
-
-        .new-sorteio-box
-          .new-sorteio
-              = form.hidden_field :lottery_id, value: @lottery.id
-              = form.label :quantity, "Quantidade de Números"
-              .sorteio-actions 
-                  = form.button '-', type: 'button', class: 'action-buttons button-add-numbers', decrement: 1  
-                  = form.number_field :quantity, min: 1, max: @lottery.ticket - contar_numeros(Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: @lottery.id.to_s), @lottery.id), step: 1, class: 'new-sorteio-input', id: 'quantity-sorteio', value: 0, readonly: true       
-                  = form.button '+', type: 'button', class: 'action-buttons button-add-numbers', increment: 1
-              .sorteio-actions                   
-                  button#openModal.new-sorteio-submit type="button" Confirmar
-                  = form.button 'Limpar', type: 'button', class: 'new-sorteio-submit button-clear-numbers'
+.container-purchase
+    .purchase
+        .container-fluid   
+            .home-title 
+                div
+                    = icon('fas', 'money-bill-alt')
+                    h1 Comprar Títulos
+                p Escolha a quantidade
+            .lottery-selected
+                -if  @lottery.image_url.present?
+                    = image_tag @lottery.image_url
+                h2 = @lottery.event 
+                p = 'Código do Sorteio: ' + @lottery.id.to_s
+                p = 'Data do Sorteio: ' + @lottery.date_event.strftime('%d/%m/%Y')
                 
-                  #myModal.modal
-                    .modal-content
-                        span.close &times;
-                        
-                        .sorteio-actions
-                            .alert-warning role="alert"
-                                p = icon('fas', 'exclamation-circle') + ' Informe seu número de telefone para continuar'
-                            = form.label :phone, "Número de Telefone: "
-                            = form.text_field :phone, id: 'phone-field', class: 'new-sorteio-input-number'
-                            = form.button "Confirmar", class: 'new-sorteio-submit' 
+    
+        = form_with(model: [@lottery], url: "#", method:'post', id: 'lottery-form') do |form|
+            .purchase-buttons
+                .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
+                    = form.button "+5", type: 'button', class: 'button-add-numbers', increment: 5
+                .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
+                    = form.button "+10", type: 'button', class: 'button-add-numbers', increment: 10
+                .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
+                    = form.button "+20", type: 'button', class: 'button-add-numbers', increment: 20
+                .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
+                    = form.button "+40", type: 'button', class: 'button-add-numbers', increment: 40
+                .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
+                    = form.button "+80", type: 'button', class: 'button-add-numbers', increment: 80
+                .new-sorteio-column.col-xs-6.col-md-6.col-lg-4
+                    = form.button "+160", type: 'button', class: 'button-add-numbers', increment: 160
+
+            .purchase-sorteio
+                = form.hidden_field :lottery_id, value: @lottery.id
+                = form.label :quantity, "Quantidade de Números"
+                .sorteio-actions 
+                    = form.button '-', type: 'button', class: 'action-buttons button-add-numbers', decrement: 1  
+                    = form.number_field :quantity, min: 1, max: @lottery.ticket - contar_numeros(Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: @lottery.id.to_s), @lottery.id), step: 1, class: 'new-sorteio-input', id: 'quantity-sorteio', value: 0, readonly: true       
+                    = form.button '+', type: 'button', class: 'action-buttons button-add-numbers', increment: 1
+                .sorteio-actions                   
+                    button#openModal.new-sorteio-submit type="button" Confirmar
+                    = form.button 'Limpar', type: 'button', class: 'new-sorteio-submit button-clear-numbers'
+                    
+                    #myModal.modal
+                        .modal-content
+                            span.close &times;
+                            
+                            .sorteio-actions
+                                .alert-warning role="alert"
+                                    p = icon('fas', 'exclamation-circle') + ' Informe seu número de telefone para continuar'
+                                = form.label :phone, "Número de Telefone: "
+                                = form.text_field :phone, id: 'phone-field', class: 'new-sorteio-input-number'
+                                = form.button "Confirmar", class: 'new-sorteio-submit' 
   
 
     javascript:
