mudanca besta no css

--- a/app/assets/stylesheets/frontend/layout.sass
+++ b/app/assets/stylesheets/frontend/layout.sass
@@ -7,7 +7,7 @@
 
 .main 
     grid-area: main
-    background-color: #161c24
+    background-color: #15171a
     min-height: calc(100vh - 160px)
 
 .header 
