--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -33,6 +33,7 @@
             box-shadow: 0 0 5px
             border-radius: 10px
             padding: 5px
+            width: 100%
         label
             font-size: 11pt
   
