--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -43,7 +43,7 @@ $letterColor: #ffffff
     flex-direction: column
     gap: 10px
     margin: 30px 0
-    label
+    > label
         color: $letterColor
     input
         width: 150px
