--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -96,7 +96,7 @@ body
         align-items: center
         border-radius: 10px
         padding: 10px
-        box-shadow: 0 0 5px
+        box-shadow: inset 0 0 5px #454545
     h4
         color: $letterColor
         font-size: 12pt
@@ -131,6 +131,8 @@ body
         width: 350px
         margin-bottom: 30px
         background-color: black
+        box-shadow: inset 0 0 5px #454545
+
         p
             margin: 0
             color: $letterColor
@@ -196,11 +198,13 @@ body
     align-items: center
     gap: 10px
     flex-direction: column
+    
     > ul
         background-color: black
         border-radius: 10px
-        padding: 5px
+        padding: 20px
         list-style-type: none
+        box-shadow: inset 0 0 5px #454545
         li
             color: $letterColor
             padding: 2px
