--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -254,7 +254,7 @@
 
 .sorteio-box 
     background-color: black
-    box-shadow: 0 0 2px
+    box-shadow: inset 0 0 5px #454545
     border-radius: 10px
     width: 320px
     margin: 0 0 30px 0px
