--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -240,10 +240,11 @@ body
     flex-wrap: wrap
     border-radius: 10px
     padding-top: 20px
-    box-shadow: 0 0 2px
+    box-shadow: inset 0 0 5px #454545
     margin-bottom: 30px
     flex-direction: column
     align-items: center
+    background-color: black
     .my-numbers-box
         display: flex
         justify-content: center
