--- a/app/views/frontend/public/term.html.slim
+++ b/app/views/frontend/public/term.html.slim
@@ -1,19 +1,26 @@
-.home-title 
-  div
-    h1 Termos de uso
-  p Leia com Atenção!
-
-.termo
-    ol 
-        li O cpf do cliente será apenas utilizado para recuperar ou alterar telefone cadastrado em caso de perda ou esquecimento.
-        li O processo de recuperação será feita através de comunicação entre suporte técnico do cash prêmios e o cliente que irá utilizar o cpf para comprovar veracidade.
-        li O sorteio dos números será realizado pela loteria federal.
-        li Após a venda total de cotas disponíveis na campanha será portanto finalizado e o nome do vencedor será divulgado.
-        li No momento da entrega o vencedor precisará participar de live para receber o prêmio. 
-        li Nenhum dos dados cadastrados na base de dados do cash prêmios será violado e os mesmos sempre serão ocultados na camada de apresentação. 
-        li Os números são escolhidos aleatoriamente pelo algoritmo do sistema, erradicando portanto qualquer tipo de fraudulência.
-        li Todos os clientes terão acesso a todos os números adquiridos de todas as campanhas.
-        li A consulta dos números adquiridos será antecedida por atenticação por número de telefone.
-        li Todos os vencedores de todas as campanhas serão divulgados na lista de ganhadores presentes nesta página.
-        li A participação nos sorteios é de livre e espontânea vontade, portanto não será permitido desistência após realização de pagamento.
-        /li O estorno só será possível na hipótese em que ao finalizar a compra o sistema responder que os números foram esgotados, nessa situação o suporte será notificado imediatamente pelo sistema e o cliente receberá de volta o dinheiro no prazo máximo de trinta minutos. 
+.container-purchase 
+  .home-title 
+    div
+      = icon('fas', 'scroll')
+      h1 Termos de uso
+    p Leia com Atenção!
+    
+  .container-fluid
+      .row
+          .purchase
+              .sorteio-container
+                .termo
+                  ol 
+                      li O cpf do cliente será apenas utilizado para recuperar ou alterar telefone cadastrado em caso de perda ou esquecimento.
+                      li O processo de recuperação será feita através de comunicação entre suporte técnico do cash prêmios e o cliente que irá utilizar o cpf para comprovar veracidade.
+                      li O sorteio dos números será realizado pela loteria federal.
+                      li Após a venda total de cotas disponíveis na campanha será portanto finalizado e o nome do vencedor será divulgado.
+                      li No momento da entrega o vencedor precisará participar de live para receber o prêmio. 
+                      li Nenhum dos dados cadastrados na base de dados do cash prêmios será violado e os mesmos sempre serão ocultados na camada de apresentação. 
+                      li Os números são escolhidos aleatoriamente pelo algoritmo do sistema, erradicando portanto qualquer tipo de fraudulência.
+                      li Todos os clientes terão acesso a todos os números adquiridos de todas as campanhas.
+                      li A consulta dos números adquiridos será antecedida por atenticação por número de telefone.
+                      li Todos os vencedores de todas as campanhas serão divulgados na lista de ganhadores presentes nesta página.
+                      li A participação nos sorteios é de livre e espontânea vontade, portanto não será permitido desistência após realização de pagamento.
+                      /li O estorno só será possível na hipótese em que ao finalizar a compra o sistema responder que os números foram esgotados, nessa situação o suporte será notificado imediatamente pelo sistema e o cliente receberá de volta o dinheiro no prazo máximo de trinta minutos. 
+                      
