--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -23,6 +23,7 @@ $letterColor: #ffffff
 @import "./pages/home"
 @import "./pages/pix"
 
+
 .container-purchase
     display: flex
     justify-content: center
@@ -31,6 +32,7 @@ $letterColor: #ffffff
     form
         display: flex
         flex-direction: column
+
 
 .purchase
     max-width: 500px
@@ -52,15 +54,12 @@ $letterColor: #ffffff
         padding: 0 10px
 
 .termo 
-    margin: 30px
     color: $letterColor
     h3
         font-size: 14pt
         text-align: center
-
 body 
-    background-color: $letterColor
-        
+    background-color: $letterColor  
 
 .alert-warning
     padding: 10px
@@ -80,7 +79,7 @@ body
         text-align: start
         width: 100%
         margin: 0
-
+    
 .messages-container
     display: flex
     justify-content: center
@@ -110,10 +109,10 @@ body
     background-color: #17a700
     border-color: #17a700
 
-
 .sorteio-column
     display: flex
     justify-content: center
+    width: 100%
 
 .my-lotteries-container
     display: flex
@@ -149,7 +148,7 @@ body
             flex-wrap: wrap
             justify-content: center
             overflow-x: auto
-            height: 130px
+            height: 200px
             align-items: start
         li
             background: #17a700
@@ -163,8 +162,8 @@ body
                 background-color: #17a700
                 border: 2px double #f4d275
                 border-radius: 50%
-                width: 50px
-                height: 50px
+                width: 80px
+                height: 80px
                 text-align: center
                 display: flex
                 justify-content: center
@@ -189,8 +188,7 @@ body
         background-color: #17a700
         color: white
         padding: 10px 40px
-        border-radius: 10px
-            
+        border-radius: 10px      
 
 .member-info  
     display: flex
@@ -258,7 +256,6 @@ body
         h3
             font-weight: bold
             color: black
-
         ul
             display: flex
             list-style-type: none
@@ -266,7 +263,7 @@ body
             margin-top: 10px
             margin-bottom: 20px
             overflow-x: auto
-            height: 180px
+            height: 200px
             justify-content: center
             flex-wrap: wrap
             padding: 10px
@@ -283,8 +280,8 @@ body
                 background-color: #17a700
                 border: 2px double #f4d275
                 border-radius: 50%
-                width: 70px
-                height: 70px
+                width: 80px
+                height: 80px
                 text-align: center
                 display: flex
                 justify-content: center
@@ -292,20 +289,52 @@ body
                 color: white
                 font-weight: bold 
 
+.numbers-finished
+    margin: 2em auto
+    text-align: center
+    h1 
+        color: white
+        font-size: 40pt
+    p 
+        color: white
+        font-size: 15px
+    strong
+        font-size: 18pt
+        color: white
+
+.transaction-number
+    display: flex
+    flex-direction: column
+    margin-top: 30px
+    p
+        margin: 0
+    
+
+.contact-link
+    display: flex
+    flex-direction: column
+    align-items: center
+    gap: 10px
+    margin-top: 30px
+    a
+        background-color: #17a700
+        padding: 10px 20px
+        color: white
+        border-radius: 10px
+        font-size: 18pt
+    i
+        margin-right: 10px
+        font-size: 18pt
+
 .error 
-    width: 70%
-    border-radius: 10px
-    border: 1px inset
-    background: beige
-    border-color: #a94442
     margin: 2em auto
     text-align: center
     h1 
         color: red
-        font-size: 7em
+        font-size: 40pt
     p 
-        color: red;
-        font-size: 15px;
+        color: red
+        font-size: 15px
     .meme 
         color: red
         p 
@@ -314,5 +343,13 @@ body
             font-size: 5em
             color: red
 
-
+.error-box
+    display: flex
+    align-items: center
+    justify-content: center
+    color: red
+    gap: 10px
+    i
+        color: red
+        font-size: 40pt
 
