--- a/app/assets/stylesheets/frontend/pages/home.sass
+++ b/app/assets/stylesheets/frontend/pages/home.sass
@@ -197,7 +197,7 @@
     border-radius: 10px 0px 0px 10px
     width: 150px
     object-fit: cover
-    height: 150px
+    height: 160px
 
 .dropdown-menu
     min-width: 0
@@ -219,8 +219,6 @@
     display: flex
     justify-content: center
     flex-wrap: wrap
-    flex-direction: column
-    align-items: center
     > .icon-box
         margin-bottom: 30px
         i
@@ -252,22 +250,42 @@
 .sorteio-box:hover
     background-color: rgba(6, 159, 1, 0.103)
 
+.sorteio-content
+    width: 100%
+    padding: 10px
+    display: flex
+    justify-content: center
+    align-items: center
+    flex-direction: column
+    p
+        margin: 0
+        color: white
+
+.sorteio-box-destaque
+    width: 100%
+    display: flex
+    flex-direction: column
+    align-items: center
+    background-color: black
+    margin-bottom: 30px
+    border-radius: 10px
+    img
+        width: 100%
+        border-radius: 10px 10px 0 0
+        height: 300px
+    h2
+        color: #ffffff
+        font-size: 12pt
+        text-align: center
+        margin: 0
+
 .sorteio-box 
     background-color: black
     box-shadow: inset 0 0 5px #454545
     border-radius: 10px
-    width: 320px
+    width: 100%
     margin: 0 0 30px 0px
     display: flex
-    .sorteio-content
-        width: 100%
-        padding: 10px
-        display: flex
-        justify-content: center
-        align-items: center
-        flex-direction: column
-        p
-            margin: 0
     h2
         color: $letterColor
         font-size: 12pt
@@ -435,6 +453,7 @@
     align-items: center
     flex-direction: column
     margin-bottom: 10px
+    width: 100%
     h2
         font-weight: bold
         color: $letterColor
@@ -447,6 +466,8 @@
         width: 100%
         border-radius: 10px
         margin-bottom: 30px
+        height: 300px
+        object-fit: cover
 
 .disponible
     display: flex
