--- a/app/views/frontend/public/error.html.slim
+++ b/app/views/frontend/public/error.html.slim
@@ -1,6 +1,16 @@
-.error  
-    h1 Poxa! 
-    p O servidor de pagamento está indisponível no momento por favor tente novamente mais tarde.
-    .meme 
-        p ERRO INTERNO STATUS: 500
-        h2 ):
+.container-purchase
+    .purchase
+        .container-fluid   
+            .sorteio-container
+                .error  
+                    .error-box
+                        = icon('fas', 'exclamation-triangle') 
+                        h1 Poxa! :(
+                    p O servidor de pagamento está indisponível no momento por favor tente novamente mais tarde.
+                    .meme 
+                        p ERRO INTERNO STATUS: 500
+                    .contact-link
+                        p Para mais informações: 
+                        = link_to 'https://wa.me/5579996613823', target: '_blank' do    
+                            = icon('fab', 'whatsapp') 
+                            = 'Clique aqui'
