--- a/app/views/frontend/public/events.html.slim
+++ b/app/views/frontend/public/events.html.slim
@@ -1,69 +1,114 @@
-section#agreement
-  .container-fluid
-    
-    .home-title 
-        div
-            = icon('fas', 'money-bill-alt')
-            h1 Campanhas
-        p Escolha sua campanha
+section#events
+    .container-purchase 
+        .container-fluid
+            .row
+                .purchase
+                    .sorteio-container
+                        .home-title 
+                            div
+                                = icon('fas', 'money-bill-alt')
+                                h1 Campanhas
+                            p Escolha sua campanha
 
-    .container-fluid
-        .row 
-            .sorteio-container
-                .icon-box
-                    = icon('fas', 'fire')
-                    h3 Em Destaque
-                .sorteio-column.col-xs-12.col-md-6.col-lg-6   
-                    = link_to new_purchase_path(id: Lottery.where(status: true).last.id), class: 'sorteio-box sorteio-destaque' do
-                        - if Lottery.where(status: true).last.image_url.present?
-                            = image_tag Lottery.where(status: true).last.image_url, class: 'sorteio-img'
-                        .sorteio-content 
-                            h2 = Lottery.where(status: true).last.event
-                            p = Lottery.where(status: true).last.content
-                    
-                            p = 'Cod: ' + Lottery.where(status: true).last.id.to_s
-                            .disponible
-                                p Disponível
-                
-                .icon-box
-                    =icon('fas', 'newspaper')
-                    h3 Todas as Campanhas
-                - (@lotteries.to_a - [Lottery.where(status: true).last]).each do |lottery|
-                    .sorteio-column.col-xs-12.col-md-6.col-lg-6
-                        - if Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: lottery.id.to_s).present?
-                            - if contar_numeros(Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: lottery.id.to_s), lottery.id) == lottery.ticket
-                                .sorteio-box
-                                    = image_tag lottery.image_url, class: 'sorteio-img'
-                                    .sorteio-content 
-                                        h2 = lottery.event
-                                        p = lottery.content
-                               
-                                        p = 'Cod: ' + lottery.id.to_s
-                                        .not-disponible
-                                            p Cotas esgotadas                         
+                            .icon-box
+                                = icon('fas', 'fire')
+                                h3 Em Destaque
+                        .sorteio-column.col-xs-12.col-md-6.col-lg-6           
+                            - lottery = Lottery.where(status: true).last
+                            - if Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: lottery.id.to_s).present?
+                                - if contar_numeros(Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: lottery.id.to_s), lottery.id) == lottery.ticket
+                                    .sorteio-box-destaque
+                                        - if lottery.image_url.present?
+                                            = image_tag lottery.image_url, class: 'sorteio-img'
+                                        .sorteio-content 
+                                            h2 = lottery.event
+                                            - if lottery.content
+                                                p = lottery.content[0, 40] + (lottery.content.length > 40 ? '...' : '')
+                                    
+                                            p = 'Cod: ' + lottery.id.to_s
+                                            .not-disponible
+                                                p Esgotadas                         
+                                - else
+                                    = link_to new_purchase_path(id: lottery.id), class: 'sorteio-box-destaque' do
+                                        - if lottery.image_url.present?
+                                            = image_tag lottery.image_url, class: 'sorteio-img'
+                                        .sorteio-content 
+                                            h2 = lottery.event 
+                                            - if lottery.content
+                                                p = lottery.content[0, 40] + (lottery.content.length > 40 ? '...' : '')
+                                    
+                                            p = 'Cod: ' + lottery.id.to_s
+
+                                            .disponible
+                                                p Disponível
+                                                    
                             - else
-                                = link_to new_purchase_path(id: lottery.id), class: 'sorteio-box' do
+                                = link_to new_purchase_path(id: lottery.id), class: 'sorteio-box-destaque' do
                                     - if lottery.image_url.present?
                                         = image_tag lottery.image_url, class: 'sorteio-img'
                                     .sorteio-content 
                                         h2 = lottery.event 
-                                        p = lottery.content
-                               
+                                        - if lottery.content
+                                            p = lottery.content[0, 40] + (lottery.content.length > 40 ? '...' : '')
+                                    
                                         p = 'Cod: ' + lottery.id.to_s
-
                                         .disponible
                                             p Disponível
-                                                
-                        - else
-                            = link_to new_purchase_path(id: lottery.id), class: 'sorteio-box' do
-                                = image_tag lottery.image_url, class: 'sorteio-img'
-                                .sorteio-content 
-                                    h2 = lottery.event 
-                                    p = lottery.content
-                               
-                                    p = 'Cod: ' + lottery.id.to_s
-                                    .disponible
-                                        p Disponível
+
+                                / - if Lottery.where(status: true).last.image_url.present?
+                                /     = image_tag Lottery.where(status: true).last.image_url, class: 'sorteio-img'
+                                /     .sorteio-content 
+                                /         h2 = Lottery.where(status: true).last.event
+                                /         p = Lottery.where(status: true).last.content
+                                
+                                /         p = 'Cod: ' + Lottery.where(status: true).last.id.to_s
+                                /         .disponible
+                                /             p Disponível
+                        
+                        .icon-box
+                            =icon('fas', 'newspaper')
+                            h3 Todas as Campanhas
+                        - (@lotteries.to_a - [Lottery.where(status: true).last]).each do |lottery|
+                            .sorteio-column.col-xs-12.col-md-6.col-lg-6
+                                - if Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: lottery.id.to_s).present?
+                                    - if contar_numeros(Member.where("tickets->>:lottery_id IS NOT NULL", lottery_id: lottery.id.to_s), lottery.id) == lottery.ticket
+                                        .sorteio-box
+                                            - if lottery.image_url.present?
+                                                = image_tag lottery.image_url, class: 'sorteio-img'
+                                            .sorteio-content 
+                                                h2 = lottery.event
+                                                - if lottery.content
+                                                    p = lottery.content[0, 40] + (lottery.content.length > 40 ? '...' : '')
+                                    
+                                                p = 'Cod: ' + lottery.id.to_s
+                                                .not-disponible
+                                                    p Esgotadas                         
+                                    - else
+                                        = link_to new_purchase_path(id: lottery.id), class: 'sorteio-box' do
+                                            - if lottery.image_url.present?
+                                                = image_tag lottery.image_url, class: 'sorteio-img'
+                                            .sorteio-content 
+                                                h2 = lottery.event 
+                                                - if lottery.content
+                                                    p = lottery.content[0, 40] + (lottery.content.length > 40 ? '...' : '')
+                                    
+                                                p = 'Cod: ' + lottery.id.to_s
+
+                                                .disponible
+                                                    p Disponível
+                                                        
+                                - else
+                                    = link_to new_purchase_path(id: lottery.id), class: 'sorteio-box' do
+                                        - if lottery.image_url.present?
+                                            = image_tag lottery.image_url, class: 'sorteio-img'
+                                        .sorteio-content 
+                                            h2 = lottery.event 
+                                            - if lottery.content
+                                                p = lottery.content[0, 40] + (lottery.content.length > 40 ? '...' : '')
+                                    
+                                            p = 'Cod: ' + lottery.id.to_s
+                                            .disponible
+                                                p Disponível
 
 .text-center
   = will_paginate @lotteries, renderer: ApplicationHelper::LinkRenderer, class: 'pagination pagination-lg'
