--- a/app/views/layouts/frontend.html.slim
+++ b/app/views/layouts/frontend.html.slim
@@ -5,7 +5,8 @@ html lang="pt-BR"
     meta name="robots" content="noindex"
     meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
-    title = 'Cash Prêmio 1.0'
+    title = 'Cash Prêmios'
+    link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"
 
     = stylesheet_link_tag "frontend/application", media: "all"
     = javascript_include_tag "frontend/application"
