arrumando margem do termo de uso e box dos vencedores

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -54,6 +54,7 @@ $letterColor: #ffffff
         padding: 0 10px
 
 .termo 
+    margin: 0 30px
     color: $letterColor
     h3
         font-size: 14pt
