--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -123,7 +123,7 @@ body
     flex-wrap: wrap
     .my-lotteries-box
         display: flex
-        justify-content: center
+        justify-content: space-between
         flex-direction: column
         align-items: center
         border-radius: 10px
@@ -131,11 +131,12 @@ body
         width: 350px
         margin-bottom: 30px
         background-color: black
-        box-shadow: inset 0 0 5px #454545
-
+        box-shadow: inset 0 0 5px #454545   
+        height: 400px
         p
             margin: 0
             color: $letterColor
+            text-align: center
         h3
             font-weight: bold
             color: $letterColor
