--- a/app/views/frontend/public/comunications.html.slim
+++ b/app/views/frontend/public/comunications.html.slim
@@ -15,6 +15,6 @@
                         h4 = comunication.title + ' - ' + comunication.created_at.strftime("%d/%m/%Y")
                         = raw comunication.content
         - else 
-            .messages-container 
-                h4 Não há nenhum comunicado no momento!
+            .not-lotteries
+                p Não há nenhum comunicado no momento!
         
