--- a/app/views/frontend/public/winners.html.slim
+++ b/app/views/frontend/public/winners.html.slim
@@ -22,5 +22,6 @@ section#winners
                                             p = 'Numéro da Sorte: '+ winner.number_winner.to_s
                                                                 
                         - else 
-                            h3 Por enquanto não há vencedores ! 
+                            .not-lotteries
+                                p Por enquanto não há vencedores! 
 
