adicionando telefones, email e instagram e consertando icones do admin

--- a/app/assets/stylesheets/frontend/application.sass
+++ b/app/assets/stylesheets/frontend/application.sass
@@ -345,6 +345,27 @@ body
             font-size: 5em
             color: red
 
+.social-container
+    padding: 20px
+    h4
+        text-align: center
+        color: black
+        font-size: 11pt
+
+.social-box
+    display: flex
+    gap: 10px
+    justify-content: center
+
+.social-link
+    display: flex
+    flex-direction: column
+    align-items: center
+    color: black
+    text-align: center
+    i
+        font-size: 18pt
+
 .error-box
     display: flex
     align-items: center
